# crud

./: .gitignore  README.md  ledger.md  pyproject.toml
directives/: D-000.md  D-001.md  D-002.md  D-003.md
docs/: HELP-DOCUMENT.md  notes.md
invariants/: I-001.md  I-002.md  I-003.md  I-004.md  I-005.md  I-006.md  I-007.md  I-008.md  I-009.md  I-010.md  I-011.md  I-012.md  I-013.md  I-014.md  I-015.md  I-016.md  I-017.md  I-018.md  I-019.md  I-020.md  invariants.md
policies/: P01.md  P02.md  P03.md  P04.md  P05.md  P06.md  policy.md
scripts/: codex-prompt.sh
tasks/: task_010.md  task_D001_T1.md  task_D001_T2.md  task_D001_T3.md  task_D001_T4.md  task_D001_T5.md  task_D001_T6.md  task_D001_T7.md  task_D001_T8.md  task_D002_T0.md  task_D002_T1.md  task_D002_T2.md  task_D002_T3.md  task_D003_T1.md  task_D003_T2.md  task_D003_T3.md  task_D003_T4.md  task_I001.md  task_I002.md  task_I005.md  task_I007.md  task_I008.md  task_I010.md  task_I011.md  task_I014.md  task_I015.md  task_I017.md  task_I019.md  task_I020.md
tests/: conftest.py  test_I001_person_identity_and_structure.py  test_I002_person_identity_semantics_and_stability.py  test_I003_person_update_and_mutation_semantics.py  test_I004_person_creation_semantics.py  test_I005_person_create_operation_semantics.py  test_I006_person_read_operation_semantics.py  test_I007_person_update_operation_semantics.py  test_I008_person_delete_operation_semantics.py  test_I009_person_lifecycle_closure_and_irreversibility.py  test_I010_address_identity_and_structure.py  test_I011_address_identity_and_structure.py  (+9 more)
(+10 files in other folders)
