[project]
name = "crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "sqlalchemy>=2.0,<3.0",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["crud*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
